@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-02T00:56:03Z",
-  "count_outdated" : 1466,
-  "uniques_outdated" : 451,
+  "timestamp" : "2025-07-03T00:55:42Z",
+  "count_outdated" : 1469,
+  "uniques_outdated" : 453,
   "count" : 1472,
   "uniques" : 456,
   "views" : [
-    {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
