@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 3,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
